--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -274,39 +274,14 @@ jobs:
           git update-index --assume-unchanged ProjectSettings/ProjectSettings.asset
           echo "✅ Told git to ignore changes to ProjectSettings.asset"
       
-      # Android: Set build number in ProjectSettings
-      - name: Set Android build number
+      # Android: Set build number environment variable for Unity Editor script
+      - name: Set Android build number environment variable
         if: matrix.platform == 'Android'
         run: |
           # Use the shared build number generated in determine-platforms job
           BUILD_NUMBER="${{ needs.determine-platforms.outputs.buildNumber }}"
-          echo "Setting Android build number (versionCode) to: $BUILD_NUMBER"
-          
-          # Show current value before change
-          echo "Current AndroidBundleVersionCode:"
-          grep "AndroidBundleVersionCode" ProjectSettings/ProjectSettings.asset || echo "Not found"
-          
-          # Update AndroidBundleVersionCode in ProjectSettings.asset
-          # Android builds run on Ubuntu (Linux), so we use Linux sed syntax
-          # Use [0-9]\+ to match one or more digits (more reliable than [0-9]*)
-          sed -i "s/AndroidBundleVersionCode: [0-9]\+/AndroidBundleVersionCode: $BUILD_NUMBER/" ProjectSettings/ProjectSettings.asset
-          
-          # Verify the change was applied
-          echo "Updated AndroidBundleVersionCode:"
-          grep "AndroidBundleVersionCode" ProjectSettings/ProjectSettings.asset
-          
-          # Double-check the value is correct
-          ACTUAL_VALUE=$(grep "AndroidBundleVersionCode" ProjectSettings/ProjectSettings.asset | sed 's/.*AndroidBundleVersionCode: \([0-9]*\).*/\1/')
-          if [ "$ACTUAL_VALUE" = "$BUILD_NUMBER" ]; then
-            echo "✅ Verified: AndroidBundleVersionCode is correctly set to $BUILD_NUMBER"
-          else
-            echo "❌ ERROR: AndroidBundleVersionCode mismatch! Expected: $BUILD_NUMBER, Got: $ACTUAL_VALUE"
-            exit 1
-          fi
-          
-          # Tell git to ignore this change so Unity builder doesn't complain about dirty state
-          git update-index --assume-unchanged ProjectSettings/ProjectSettings.asset
-          echo "✅ Android build number set and git told to ignore changes"
+          echo "Setting UNITY_ANDROID_BUILD_NUMBER environment variable to: $BUILD_NUMBER"
+          echo "UNITY_ANDROID_BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
       
       # Build Unity project
       - name: Build Unity project
@@ -315,6 +290,7 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_ANDROID_BUILD_NUMBER: ${{ matrix.platform == 'Android' && needs.determine-platforms.outputs.buildNumber || '' }}
         with:
           targetPlatform: ${{ (matrix.platform == 'iOS' || matrix.platform == 'iOS-simulator') && 'iOS' || matrix.platform }}
           buildName: ${{ matrix.platform == 'iOS' && 'iOS' || (matrix.platform == 'iOS-simulator' && 'iOS-simulator' || (matrix.platform == 'StandaloneOSX' && 'macOS' || matrix.platform)) }}
@@ -1121,6 +1097,14 @@ jobs:
           echo "Found APK: $APK_FILE"
           echo "APK_FILE=$APK_FILE" >> $GITHUB_ENV
       
+      # Android: Install Android SDK build-tools for aapt
+      - name: Setup Android SDK build-tools
+        if: matrix.platform == 'Android'
+        uses: android-actions/setup-android@v3
+        with:
+          api-level: 34
+          build-tools: 34.0.0
+      
       # Android: Verify versionCode in built APK
       - name: Verify Android versionCode in APK
         if: matrix.platform == 'Android'
@@ -1131,33 +1115,38 @@ jobs:
           echo "Verifying versionCode in built APK..."
           echo "Expected versionCode: $BUILD_NUMBER"
           
-          # Extract AndroidManifest.xml from APK and check versionCode
-          # APK is a ZIP file, so we can unzip it
-          unzip -q -o "$APK_FILE" AndroidManifest.xml -d /tmp/apk_extract_$$ || {
-            echo "⚠️  Could not extract AndroidManifest.xml directly, trying aapt/aapt2..."
-            # Try using aapt if available (part of Android SDK)
-            if command -v aapt &> /dev/null; then
-              APK_VERSION_CODE=$(aapt dump badging "$APK_FILE" 2>/dev/null | grep "versionCode" | sed "s/.*versionCode='\([^']*\)'.*/\1/" || echo "")
-              if [ -n "$APK_VERSION_CODE" ]; then
-                echo "APK versionCode (from aapt): $APK_VERSION_CODE"
-                if [ "$APK_VERSION_CODE" = "$BUILD_NUMBER" ]; then
-                  echo "✅ APK versionCode matches expected value: $BUILD_NUMBER"
-                else
-                  echo "❌ WARNING: APK versionCode ($APK_VERSION_CODE) does not match expected ($BUILD_NUMBER)"
-                fi
+          # Try to use aapt/aapt2 to read versionCode from APK
+          AAPT_CMD=""
+          if command -v aapt &> /dev/null; then
+            AAPT_CMD="aapt"
+          elif command -v aapt2 &> /dev/null; then
+            AAPT_CMD="aapt2"
+          elif [ -d "$ANDROID_HOME/build-tools" ]; then
+            # Find the latest build-tools version
+            BUILD_TOOLS_DIR=$(find "$ANDROID_HOME/build-tools" -maxdepth 1 -type d | sort -V | tail -1)
+            if [ -n "$BUILD_TOOLS_DIR" ] && [ -f "$BUILD_TOOLS_DIR/aapt" ]; then
+              AAPT_CMD="$BUILD_TOOLS_DIR/aapt"
+            fi
+          fi
+          
+          if [ -n "$AAPT_CMD" ]; then
+            echo "Using $AAPT_CMD to read APK versionCode..."
+            APK_VERSION_CODE=$("$AAPT_CMD" dump badging "$APK_FILE" 2>/dev/null | grep "versionCode" | sed "s/.*versionCode='\([^']*\)'.*/\1/" || echo "")
+            
+            if [ -n "$APK_VERSION_CODE" ]; then
+              echo "APK versionCode (from APK): $APK_VERSION_CODE"
+              if [ "$APK_VERSION_CODE" = "$BUILD_NUMBER" ]; then
+                echo "✅ APK versionCode matches expected value: $BUILD_NUMBER"
               else
-                echo "⚠️  Could not extract versionCode from APK"
+                echo "❌ ERROR: APK versionCode ($APK_VERSION_CODE) does not match expected ($BUILD_NUMBER)"
+                echo "This indicates Unity may have overridden the versionCode during build"
+                exit 1
               fi
             else
-              echo "⚠️  aapt not available, skipping APK versionCode verification"
+              echo "⚠️  Could not extract versionCode from APK using $AAPT_CMD"
             fi
-            exit 0
-          }
-          
-          # If we extracted AndroidManifest.xml, check it (it's binary, so we'd need aapt or similar)
-          if [ -f /tmp/apk_extract_$$/AndroidManifest.xml ]; then
-            echo "Extracted AndroidManifest.xml (binary format, requires aapt to read)"
-            rm -rf /tmp/apk_extract_$$
+          else
+            echo "⚠️  aapt/aapt2 not available, skipping APK versionCode verification"
           fi
       
       # Android: Upload APK to GCS latest/ directory for direct download
